--- a/src/components/HomeComponents/Inventory/Inventory.css
+++ b/src/components/HomeComponents/Inventory/Inventory.css
@@ -1,11 +1,20 @@
 .btns button {
     border: none;
     background-color: rgb(0, 0, 0);
-    color: white;
+    color: rgb(255, 255, 255);
     border-radius: 1rem;
     text-decoration: none;
     padding: 0rem 1rem;
     margin-right: 1rem;
+}
+
+
+.quantity-input {
+    width: 100px;
+    height: 50px;
+    border-radius: 0.5rem;
+    background-color: white;
+    border: none;
 }
 
     
