--- a/src/components/HomeComponents/Inventory/Inventory.css
+++ b/src/components/HomeComponents/Inventory/Inventory.css
@@ -8,9 +8,16 @@
     margin-right: 1rem;
 }
 
+.input {
+    border: none;
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
+    margin: 0.5rem;
+}
+
 
 .quantity-input {
-    width: 100px;
+    width: 50px;
     height: 50px;
     border-radius: 0.5rem;
     background-color: white;
